# prometheus-mcp

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  EVALUATION.md  README.md  evaluation.xml  pyproject.toml  server.json
.github/workflows/: auto-release.yml  post-push-check.yml  publish.yml  test.yml
.planning/: MILESTONE-COMPLETED-V4.md  MILESTONE-COMPLETED.md  MILESTONE-INITIATED.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v4.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-config-schema-loading/: 01-CONTEXT.md  01-PLAN.md  01-SUMMARY.md
.planning/phases/01-investigation-tools/: 01-CONTEXT.md
.planning/phases/02-instance-registry/: 02-CONTEXT.md  02-PLAN.md  02-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md
scripts/: auto-commit-push.sh  release.sh
specs/: README.md  openapi.yaml  validate_spec.py
src/prometheus_mcp/: __init__.py  _mcp.py  alertmanager_client.py  cache.py  client.py  config.py  correlation.py  dependency.py  errors.py  federation.py  models.py  output.py  rca.py  registry.py  server.py  tools.py  tools_alertmanager.py  tools_correlation.py  tools_federation.py  tools_federation_v4.py  tools_status.py  trend_analysis.py
tests/: conftest.py  test_cache.py  test_client.py  test_config.py  test_correlation.py  test_dependency.py  test_errors.py  test_federation.py  test_mcp_client_cache.py  test_protocol.py  test_rca.py  test_registry.py  test_server_registration.py  test_tools_alertmanager.py  test_tools_correlation.py  test_tools_helpers.py  test_tools_integration.py  test_tools_status.py  test_trend_analysis.py  test_v4_integration.py
(+45 files in other folders)
